--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,23 +10,23 @@ services:
         volumes:
             - ./php/src:/var/www/html/
         ports:
-            - 8000:80
+            - 7077:80
     db:
         container_name: db
         image: mysql
         restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
-            MYSQL_DATABASE: MYSQL_DATABASE
-            MYSQL_USER: user
-            MYSQL_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: db
+            MYSQL_USER: testdummy
+            MYSQL_PASSWORD: testpass
         ports:
             - "9906:3306"
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         ports:
-            - '8080:80'
+            - '8088:80'
         restart: always
         environment:
             PMA_HOST: db
